analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/ActualTypeAlias.java
public final class ActualTypeAliasKt /* p.ActualTypeAliasKt*/ {
}
